Bug 303891 - Fade effect is being executed for minimized windows
Summary: Fade effect is being executed for minimized windows
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 4.8.97
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 4.9.0
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/105...
Keywords: regression
Depends on:
Blocks:
 
Reported: 2012-07-21 15:18 UTC by Alexander
Modified: 2012-07-22 08:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments
Example video (740.31 KB, video/ogg)
2012-07-21 15:19 UTC, Alexander
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander 2012-07-21 15:18:22 UTC
Extracted from Bug #158262

Kwin fade effect is being applied for minimized windows, what cause minimized window to appear before closing.

Reproducible: Always

Steps to Reproduce:
1. Open any window
2. Minimize it
3. Close it by using the right click menu on the task bar item
Actual Results:  
Minimized window will appear on the desktop before being closed.

Expected Results:  
Window should not appear on the desktop if it was minimized.
Comment 1 Alexander 2012-07-21 15:19:18 UTC
Created attachment 72669 [details]
Example video
Comment 2 Martin Flöser 2012-07-21 16:03:00 UTC
Found the reason and I rather doubt that it worked before.

When the windowClosed signal is emitted the EffectWindow belongs already to the Deleted instance, but the minimized property has not been copied over to the Deleted, thus evaluating to false when trying to access it, thus breaking all checks whether the window should be animated.
Comment 3 Martin Flöser 2012-07-22 08:07:09 UTC
Git commit fa2e7c4348fc052c65d0fe96eced5650b6da88fb by Martin Gräßlin.
Committed on 21/07/2012 at 18:09.
Pushed by graesslin into branch 'KDE/4.9'.

Pass property minimized from Client to Deleted

Ensures that we can access the minimized property in Effects
which want to not animate a closed, minimized window.

Make use of it in the Fade Effect Script to not fade out a
minimized window which would mean showing the actual not
visible window.
FIXED-IN: 4.9.0
REVIEW: 105647

M  +2    -0    kwin/deleted.cpp
M  +5    -0    kwin/deleted.h
M  +1    -1    kwin/effects/fade/package/contents/code/main.js

http://commits.kde.org/kde-workspace/fa2e7c4348fc052c65d0fe96eced5650b6da88fb
Comment 4 Alexander 2012-07-22 08:35:09 UTC
Thank you. Think this bug wasn't noticeable before, because of the bug from where this one has been extracted.